2006-08-16 Harri Pitkänen  <hatapitk@iki.fi>

	* Three new character replacement suggestions.

2006-08-14 Harri Pitkänen  <hatapitk@iki.fi>

	* Accept some alternative Unicode sequences for certain characters.
	  This is enabled only for spellchecking: it is still recommended that
	  applications convert string to a normalised form (see src/voikko_charset.c)
	  before using hyphenator functions.

2006-08-14 Harri Pitkänen  <hatapitk@iki.fi>

	* Modify suggestions to match the character case of the original word
	  if this is possible without invalidating the suggestion.

2006-08-12 Harri Pitkänen  <hatapitk@iki.fi>

	* Do not suggest splitting a word or adding a hyphen in certain
	  cases where there already is an other hyphen nearby.

2006-07-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Add -no-undefined to libvoikko_la_LDFLAGS, which is supposed to
	  enable building shared libraries on Windows.

2006-07-25 Harri Pitkänen  <hatapitk@iki.fi>

	* Increase version to 1.0

2006-07-03 Harri Pitkänen  <hatapitk@iki.fi>

	* Fix the previous fix for character insertion suggestions
	* Fix a bug and optimise character duplication suggestions

2006-06-26 Harri Pitkänen  <hatapitk@iki.fi>

	* Fix a bug in character insertion suggestions

2006-06-17 Harri Pitkänen  <hatapitk@iki.fi>

	* Do not hyphenate between vowels in voikko_simple_hyphenation if
	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set
	* Remove warning about unimplemented VOIKKO_OPT_NO_UGLY_HYPHENATION
	  in voikko.h (it was first implemented on 2006-05-24)
	* Suggest replacing s with š and z with ž rather than sh and zh.
	* If a suggestion cannot be represented in the external encoding, drop only
	  that suggestion instead of returning null immediately.

2006-06-06 Harri Pitkänen  <hatapitk@iki.fi>

	* Improve character insertion suggestions

2006-06-01  Harri Pitkänen  <hatapitk@iki.fi>

	* Add error recovery and fix some related bugs
	* Increase version to 0.9

2006-05-30  Kai Solehmainen  <kai.solehmainen@oikeatoliot.fi>